<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, AndroidOBDLoggerActivity!</string>
    <string name="app_name">AndroidOBDLogger</string>
    
    <!-- Menu items -->
    <string name="menu_title_settings">Settings</string>
    
    <!-- Preference categories -->
    <string name="pref_cat_about">About</string>
    <string name="pref_cat_bluetooth">Bluetooth</string>
    <string name="pref_cat_car_dock">Car Mode</string>
    
    <!-- Preference keys -->
    <string name="pref_key_bluetooth_device">bluetooth_device</string>
    <string name="pref_key_car_mode">car_mode</string>
    <string name="pref_key_app_version">app_version</string>
    <string name="pref_key_app_build">app_build</string>
    <string name="pref_key_send_feedback">send_feedback</string>
    
    <!-- Preference titles -->
    <string name="pref_title_bluetooth_device">Bluetooth device</string>
    <string name="pref_title_car_mode">Auto start</string>
    <string name="pref_title_app_version">App version</string>
    <string name="pref_title_app_build">App build</string>
    <string name="pref_title_send_feedback">Send feedback</string>
    
    <!-- Preference summaries -->
    <string name="pref_summary_car_mode">Automatically start and stop the logger when entering or exiting car mode.</string>
    
    <!-- Error messages -->
    <string name="error_bluetooth_not_supported">Your device does not support Bluetooth!</string>
</resources>